# euclid_sim

./: README.md
tools/: README.md
tools/common/: CMakeLists.txt  LICENSE
tools/common/include/: IPktFile.hpp  MappedFile.hpp  MappedPktFile.hpp  Pkt.hpp  PktWriter.hpp
tools/common/src/: MappedFile.cpp  MappedPktFile.cpp  PktWriter.cpp
tools/experiment_runner/: CMakeLists.txt  LICENSE  README.md
tools/experiment_runner/docs/: example_experiment.json
tools/experiment_runner/include/euclid/: Classifier.hpp  ExtendedCountSketch.hpp  Status.hpp
tools/experiment_runner/include/experiment/: Diagnoser.hpp  IClassifier.hpp  Runner.hpp
tools/experiment_runner/src/: main.cpp
tools/pcap_pkt_converter/: CMakeLists.txt  README.md
tools/pcap_pkt_converter/src/: main.cpp
tools/pkt_mixer/: CMakeLists.txt  README.md
tools/pkt_mixer/src/: main.cpp
tools/pkt_visualizer/: CMakeLists.txt  README.md
tools/pkt_visualizer/src/: main.cpp
